--- a/CODE HELP/CSS/lecture16_display_property/style.css
+++ b/CODE HELP/CSS/lecture16_display_property/style.css
@@ -40,5 +40,5 @@ width - content wise, custom width and height not applicable
 , margin - only horizontal and padding for all 4
 4) Conversion - using display tag for both
 5) COmbination of both - display-inline block
-behaves like inline, but custom margin and padding 
+behaves like inline, but custom width, height , margin and padding 
 */
