--- a/CODE HELP/CSS/lecture18_size_units/style.css
+++ b/CODE HELP/CSS/lecture18_size_units/style.css
@@ -1,5 +1,38 @@
-.box{
+*{
+    margin: 0;
+    padding: 0;
+}
+
+/* .box{
     border: 2px solid red;
+    width : 25%
+}
+.parent{
+    border: 1px solid black;
+    background-color: beige;
+    width: 50%;
+}
+.child{
+    border: 1px solid green;
+    background-color: aqua;
+    width: 20%;
+} */
+
+/* .container{
+    border: 1px solid black;
+    background-color: beige;
+    height: 100vh;
+    width: 100vh;
+} */
+.box1{
+    border: 1px solid black;
+    font-size: 50px;
+}
+.container{
+    font-size: 10px;
+}
+.box{
+    font-size: 10em;
 }
 
 
@@ -7,6 +40,12 @@
 
 
 
-
 /* Todays learning : 
-1) Size units :    */
+1) Size units :  
+2) Percentage - percentage of intermediate parent class  
+3) viewport - complete width and height inside a tab of browser
+# 100 vh - whole height of viewport
+4) pixel(absolute) - 1/26 inch
+ppi vs dpi
+5) em unit(relative) - parent element size (default size is root (16 px) 10 em = 10*parent element size
+6) rem - (default root size - 16px) 10 rem = 10*16px*/
