--- a/CODE HELP/CSS/lecture20_flexbox/style.css
+++ b/CODE HELP/CSS/lecture20_flexbox/style.css
@@ -6,8 +6,8 @@
 /* Todays Learning : 
 1) Layout - positioning of different component in a way
 2) Flexbox - 1-D Layout Method
-3) 
-4) 
+3) FLEX CONTAINER - flex item, main axis(x axis) and cross axis(y axis)
+4) display : flex to make container into flex container
 5) 
 6) 
 7) 
