--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* Resets */
+
 *{
     margin: 0;
     padding: 0;
@@ -43,7 +45,27 @@ a{
     display: inline;
 }
 
+/* Utility classes */
+
 .small-bold-text{
     font-size: 1rem;
     font-weight: 700;
+}
+
+.container{
+    max-width: 1180px;
+    margin-inline: auto;
+    padding-inline: var(--padding-inline-section);
+}
+
+.top-banner{
+    background-image: url('./assets/asset\ 30.png');
+    background-color: #4fb3d4;
+    background-size: 300px;
+}
+
+.banner-text{
+    color: white;
+    padding: 15px 30px;
+    text-align: center;
 }
