--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
@@ -34,15 +34,15 @@ h3{
 }
 
 p{
-    font-family: 'Roboto',sans-serif;
-    font-size: 1.25 rem;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.25rem;
     color: var(--secondary-text-color);
     line-height: 1.8rem;
 }
 
 a{
     text-decoration: none;
-    display: inline;
+    display: inline-block;
 }
 
 ul{
@@ -136,4 +136,98 @@ ul{
 .nav-links ul{
     justify-content: end;
     gap: 40px;
+}
+
+/* Header */
+
+header{
+    padding: 50px var(--padding-inline-section) 0;
+}
+
+.header-section{
+    justify-content: center;
+    gap:50px;
+}
+
+.header-left{
+    max-width: 40vw;
+}
+
+.header-left h1{
+    margin-top: 20px;
+}
+
+.get-started-btn{
+    margin-top: 20px;
+}
+
+.header-right img{
+    width: 600px;
+}
+
+/* companies header */
+
+.companies-header{
+    text-align: center;
+    margin-block: 30px;
+    color: var(--primary-text-color);
+}
+
+.logos{
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo{
+    height: 46px;
+}
+
+/* Features section*/
+
+.features-section{
+    padding: 80px var(--padding-inline-section) 0;
+    background-image: url(./assets/asset\ 32.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.features-header{
+    text-align: center;
+
+}
+
+.features-heading-text{
+    margin-bottom: 20px;
+}
+
+.features-area{
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.features-card{
+    flex-direction: column;
+    gap: 20px;
+    max-width: 30%;
+    text-align: center;
+}
+
+/* Big Feature Section */
+
+.big-feature-section{
+    padding: 30px var(--padding-inline-section);
+}
+
+.big-feature-container{
+    gap: 30px;
+}
+
+.feature-img img{
+    width: 100%;
+}
+
+.feature-desc{
+    flex-direction: column;
+    align-items: flex-start;
 }
