--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
@@ -276,3 +276,39 @@ header{
     right: 20px;
     color: white;
 }
+
+/* CTA section */
+
+.cta-section-container{
+    flex-direction: column;
+    gap: 30px;
+    color: white;
+}
+
+.cta-section{
+    padding: 120px var(--padding-inline-section) 80px;
+    background-color: #183b54;
+}
+
+.cta-section-container p{
+    color: white;
+    margin-top: 20px;
+}
+
+/* Footer */
+
+footer{
+    padding-block: 80px;
+    background-color: #ebf2fa;
+}
+
+.link-column{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.footer-container{
+    align-items: flex-start;
+    justify-content: space-between;
+}
