--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
@@ -213,6 +213,10 @@ header{
     text-align: center;
 }
 
+.features-card img{
+    width: 60px;
+}
+
 /* Big Feature Section */
 
 .big-feature-section{
@@ -311,4 +315,17 @@ footer{
 .footer-container{
     align-items: flex-start;
     justify-content: space-between;
+}
+
+/* Sub Footer */
+
+.subfooter{
+    background-color: #b9cde4;
+    padding: var(--padding-inline-section);
+}
+
+.subfooter-container{
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
 }
