--- a/CODE HELP/CSS/lecture21_media_queries/style.css
+++ b/CODE HELP/CSS/lecture21_media_queries/style.css
@@ -56,9 +56,45 @@
     }
 } */
 
+.container{
+    border: 1px solid black;
+    background-color: bisque;
+    display: flex;
+    flex-direction: row;
+    width: 500px;
+}
 
+#boxleft{
+    background-color: aquamarine;
+    border: 1px solid blue;
+    width: 47%;
+    margin: 2px;
+    padding: 2px;
+    display: flex;
+    flex-direction: column;
+}
 
+#boxright{
+    background-color: yellow;
+    border: 1px solid brown;
+    width: 47%;
+    margin: 2px;
+    padding: 2px;
+}
 
+img{
+    width: 170px;
+}
+
+p{
+    border: 1px solid red;
+}
+
+@media (max-width: 640px){
+    .container{
+        flex-direction: column;
+    }
+}
 
 
 /* Todays Learning : 
