--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/style.css
@@ -60,6 +60,7 @@ ul{
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: var(--padding-inline-section);
+    overflow: hidden;
 }
 
 .flex{
@@ -84,6 +85,7 @@ ul{
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0,2s ease-out;
+    text-align: center;
 }
 
 .primary-button:hover{
@@ -123,6 +125,7 @@ ul{
 .main-nav{
     margin-top: 20px;
     justify-content: space-between;
+    position: relative;
 }
 
 .company-logo img{
@@ -136,6 +139,10 @@ ul{
 .nav-links ul{
     justify-content: end;
     gap: 40px;
+}
+
+.nv-toggle{
+    display: none;
 }
 
 /* Header */
@@ -162,7 +169,7 @@ header{
 }
 
 .header-right img{
-    width: 600px;
+    width: 100%;
 }
 
 /* companies header */
@@ -174,8 +181,9 @@ header{
 }
 
 .logos{
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 20px;
 }
 
 .logo{
@@ -193,6 +201,7 @@ header{
 
 .features-header{
     text-align: center;
+    margin-bottom: 40px;
 
 }
 
@@ -203,6 +212,7 @@ header{
 .features-area{
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 20px;
     margin-top: 20px;
 }
 
@@ -236,7 +246,15 @@ header{
     align-items: flex-start;
 }
 
+#second-big-feature{
+    flex-direction: row-reverse;
+}
+
 /* examples section */
+
+.examples-section{
+    padding: 80px var(--padding-inline-section);
+}
 
 .examples-header{
     text-align: center;
@@ -247,12 +265,13 @@ header{
 .examples-area{
     justify-content: space-between;
     margin-block: 30px;
+    flex-wrap: wrap;
 }
 
 .examples-card{
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 35.jpeg); 
     background-size: cover;;
@@ -287,6 +306,7 @@ header{
     flex-direction: column;
     gap: 30px;
     color: white;
+    text-align: center;
 }
 
 .cta-section{
