--- a/UPSKILL MAFIA/CSS/Current/task6/style.css
+++ b/UPSKILL MAFIA/CSS/Current/task6/style.css
@@ -5,28 +5,34 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-img {
-    max-width: 44%;
-}
-
-
 ul {
     text-align: center;
     padding: 30px;
     margin: 20px;
     background-color: rgba(46, 121, 77, 0.793);
     color: white;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
 }
 
-li{
-    display: inline;
-    padding: 20px;
+.nav-inside{
+    width: 40vw;
+    display: flex;
+    justify-content: space-around;
+}
+
+li:hover {
+    color: violet;
+    cursor: pointer;
 }
 
 #logo{
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 7vw;
+    top: 3vh;
+    width: 10vw;
+    height: 13vh;
 }
 
 .Username{
@@ -35,44 +41,54 @@ li{
     font-size: 20px;
 }
 
+.hero{
+    display: flex;
+    justify-content: space-between;
+}
+
+.left{
+    width: 70vw;
+}
+
+.right{
+    width: 30vw;
+}
+
 .img2{
-    float: right;
-    max-width: 35%;
+    height: 70vh;
+    width: 28vw;
 }
 
 .fp{
-    margin-top: 65px;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-left: 120px;
-    padding-right: 40px;
+    margin: 65px 20px 0px 20px;
+    padding: 0px 40px 0px 120px;
     font-size: 70px;
 }
 
 .sp{
-    margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 20px;
-    padding-left: 120px;
-    padding-right: 60px;
+    margin: 10px 20px 0px 30px;
+    padding: 0px 60px 0px 120px;
     font-size: 20px;
     
 }
 
 .bp{
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 20px;
-    padding-left: 120px;
-    padding-right: 60px;
+    margin: 20px 20px 0px 30px;
+    padding: 0px 60px 0px 120px;
 }
 
 .button {
+    border: none;
     color: white;
-    background-color: aqua;
+    background-color: rgb(55, 55, 224);
     padding: 15px 32px;
     text-align: center;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+}
+
+.button:hover {
+background-color: #04AA6D;
+color: white;
 }
