--- a/UPSKILL MAFIA/CSS/Current/task6/media-queries.css
+++ b/UPSKILL MAFIA/CSS/Current/task6/media-queries.css
@@ -3,26 +3,34 @@
         font-size: 14px;
     }
     #logo{
-        height: 12vh;
+        height: 8vh;
+        width: 12vw;
+        top: 2vh;
+    }
+    .left{
+        width: 55vw;
+    }
+    .right{
+        width: 45vw;
     }
     .fp{
         margin: 65px 20px 0px 30px;
-        padding: 0px 40px 0px 40px;
+        padding: 0px 10px 0px 40px;
         font-size: 50px;
     }
 
     .sp{
-        padding: 0px 60px 0px 40px;
+        padding: 0px 10px 0px 40px;
         font-size: 16px;
         
     }
     .bp{
-        padding: 0px 60px 0px 40px;
+        padding: 0px 10px 0px 40px;
     }
     .img2{
-        margin-top: 20vh;
-        height: 40vh;
-        width: 28vw;
+        margin-top: 3vh;
+        height: 50vh;
+        width: 42vw;
     }
 }
 
@@ -32,7 +40,9 @@
     }
     #logo{
         width: 20vw;
-        height: 10vh;
+        height: 9vh;
+        top: 3.3vh;
+        width: 20vw;
     }
     .hero{
         flex-direction: column;
@@ -43,9 +53,19 @@
     .right{
         width: 100vw;
     }
+    .fp{
+        margin-top: 10px;
+        font-size: 30px;
+    }
+    .sp{
+        font-size: 10px;
+    }
+    .button{
+        font-size: 10px;
+    }
     .img2{
         margin: 0px;
-        height: 50vh;
+        height: 46vh;
         width: 100vw;
     }
 }
