--- a/UPSKILL MAFIA/CSS/Current/task6/style.css
+++ b/UPSKILL MAFIA/CSS/Current/task6/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    overflow: hidden;
+}
+
+body::-webkit-scrollbar {        
+    display: none;
 }
 
 ul {
