--- a/CODE HELP/CSS/lecture27_cards_website/style2.css
+++ b/CODE HELP/CSS/lecture27_cards_website/style2.css
@@ -19,7 +19,73 @@
 
 .card{
     width: 360px;
-    height: 500px;
+    height: 600px;
     background-color: white;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+}
+
+.card img{
+    width: 100%;
+    height: 30%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.textbox{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    padding: 20px;
+    text-align: center;
+}
+
+.amount{
+    width: 80%;
+    height: 10%;
+    background-color: #8BC6EC;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.left{
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.imagebox img{
+    height: 3.5rem;
+    width: 3.5rem;
+}
+
+.right a{
+    text-decoration: none;
+}
+
+#payment{
+    width: 80%;
+    height: 9%;
+    background-color: rgb(22,22,79);
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19);
+}
+
+.cancel a{
+    text-decoration: none;
+    color: rgb(46,43,43);
+    font-weight: bold;
+    font-size: large;
 }
