--- a/CODE HELP/CSS/lecture28_Grid/style.css
+++ b/CODE HELP/CSS/lecture28_Grid/style.css
@@ -3,3 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Todays Learning : 
+1) Grid - used for layout 
+2) Divided into rows and columns into cells
+3) gap btw two columns or rows is called track
+4) parent container - display: grid + child items
+5) 
+6) 
+7) 
+8) 
+9) 
+10)  */
