--- a/CODE HELP/CSS/lecture29and30_blog_website/style.css
+++ b/CODE HELP/CSS/lecture29and30_blog_website/style.css
@@ -4,7 +4,17 @@
     box-sizing: border-box;
 }
 
+body{
+    height: 100%;
+    width: 100%;
+}
+
+a{
+    text-decoration: none;
+}
+
 .container{
-    width: 100vw;
-    height: 100vh;
+    max-width: 95vw;
+    padding: 2rem 1rem;
+    margin: 0 auto;
 }
