--- a/CODE HELP/CSS/lecture32_3D_Transformation/style.css
+++ b/CODE HELP/CSS/lecture32_3D_Transformation/style.css
@@ -3,12 +3,55 @@
     padding: 0;
     box-sizing: border-box;
 }
-    body{
+body{
     width: 100%;
     height: 100%;
 }
+.container{
+    background-color: antiquewhite;
+    padding: 5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+.item{
+    height: 250px;
+    width: 250px;
+    background-color:  rgb(105, 208, 14);
+    border: 2px solid black;
+    padding: 2rem;
+}
 
+#rotateX:hover{
+    transform: rotateX(45deg);
+}
+#rotateY:hover{
+    transform: rotateY(45deg);
+}
+#rotateZ:hover{
+    transform: rotateZ(45deg);
+}
+#translateX:hover{
+    transform: translateX(100px);
+}
+#translateY:hover{
+    transform: translateY(100px);
+}
+#translateZ:hover{
+    transform: perspective(300px) translateZ(100px);
+}
+#scaleX:hover{
+    transform: scaleX(2);
+}
+#scaleY:hover{
+    transform: scaleY(2);
+}
+#scaleZ:hover{
+    transform: perspective(300px) rotateY(45deg) scaleZ(1.5);
+}
 
 /* Todays Learning : 
 1) 3D Transform - include x, y and z 
-2) Translate, Scale and rotate*/
+2) Translate, Scale and rotate
+3) For translateZ , we need to set perspective through perspective() for visibility
+4) For scaleZ, we need it rotated for visibility with perspective*/
